home overflow fix

--- a/index.css
+++ b/index.css
@@ -207,6 +207,7 @@ section h3 {
     max-width: 100%;
     margin: 0px;
     text-align: center;
+    overflow: hidden;
 }
 
 #about {
@@ -660,7 +661,7 @@ input:-webkit-autofill:active {
         font-size: 32px;
         padding: 0 8px;
         width: 100vw;
-        height: 100vh;
+        min-height: 100vh;
         min-width: 0;
         max-width: 100vw;
         box-sizing: border-box;
